# audio_transcriber

./: .gitignore  README.md  pyproject.toml
docs/: devloper_notes.md  installation_guide.md  安裝指南.md  開發者備註.md
examples/: simple.py  simple_chinese_comments.py  transcribe_auto_detect_language.py  transcribe_chinese_audio.py  transcribe_extract.py  transcribe_translate.py
src/audio_transcriber/: __init__.py  config.py  postprocessor.py  transcriber.py  utils.py
testing_bits/: simlpe_test.py  test_transcribe.py
testing_bits/chinese_audio/: videoplayback_cleaned.docx  videoplayback_raw.docx  videoplayback_summary.docx
testing_bits/english_audio/: TED_Talks_Daily_Trailer_characters.docx  TED_Talks_Daily_Trailer_cleaned.docx  TED_Talks_Daily_Trailer_raw.docx  TED_Talks_Daily_Trailer_summary.docx  TED_Talks_Daily_Trailer_zh-TW.docx
testing_bits/output/: test_transcript.docx  test_transcript.srt
